successfully register a user in the database with google